--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,45 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
+@inproceedings{huang2018pearl,
+  title={Pearl-TEE: supporting untrusted applications in trustzone},
+  author={Huang, Wei and Rudchenko, Vasily and Shuang, He and Huang, Zhen and Lie, David},
+  booktitle={Proceedings of the 3rd Workshop on System Software for Trusted Execution},
+  pages={8--13},
+  year={2018}
+}
+
+@article{zhao2019sok,
+  title={Sok: Hardware security support for trustworthy execution},
+  author={Zhao, Lianying and Shuang, He and Xu, Shengjie and Huang, Wei and Cui, Rongzhen and Bettadpur, Pushkar and Lie, David},
+  journal={arXiv preprint arXiv:1910.04957},
+  year={2019}
+}
+
+@inproceedings{shuang2019using,
+  title={Using inputs and context to verify user intentions in internet services},
+  author={Shuang, He and Huang, Wei and Bettadpur, Pushkar and Zhao, Lianying and Pustogarov, Ivan and Lie, David},
+  booktitle={Proceedings of the 10th ACM SIGOPS Asia-Pacific Workshop on Systems},
+  pages={76--83},
+  year={2019}
+}
+
+@inproceedings{shuang2023vwitness,
+  title={vWitness: Certifying Web Page Interactions with Computer Vision},
+  author={Shuang, He and Zhao, Lianying and Lie, David},
+  booktitle={2023 53rd Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
+  pages={431--444},
+  year={2023},
   organization={IEEE}
+}
+
+@article{shuang2024dumviri,
+  title={Dumviri: Detecting Trackers and Mixed Trackers with a Breakage Detector},
+  author={Shuang, He and Zhao, Lianying and Lie, David},
+  journal={arXiv preprint arXiv:2402.08031},
+  year={2024}
+}
+
+@book{shuang2020using,
+  title={Using Context to Verify Human Intent},
+  author={Shuang, He},
+  year={2020},
+  publisher={University of Toronto (Canada)}
 }
