--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+
+@article{zhao2024survey,
+  title={A Survey of Hardware Improvements to Secure Program Execution},
+  author={Zhao, Lianying and Shuang, He and Xu, Shengjie and Huang, Wei and Cui, Rongzhen and Bettadpur, Pushkar and Lie, David},
+  journal={ACM Computing Surveys},
+  year={2024},
+  publisher={ACM New York, NY}
 }
